--- a/src/features/theme/themes/default/styles/index.css
+++ b/src/features/theme/themes/default/styles/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "../../../../../styles/shared.css";
 
 @import "@fontsource-variable/noto-sans-sc";
 @import "@fontsource-variable/noto-serif-sc";
