--- a/src/styles.css
+++ b/src/styles.css
@@ -1,22 +1,3 @@
 @import "tailwindcss";
+@import "./styles/shared.css";
 @import "tw-animate-css";
-
-@custom-variant dark (&:is(.dark *));
-@custom-variant light (&:is(.light *));
-@custom-variant system (&:is(.system *));
-
-@layer base {
-  button:not(:disabled),
-  [role="button"]:not(:disabled) {
-    cursor: pointer;
-  }
-}
-
-html.dark .shiki,
-html.dark .shiki span {
-  color: var(--shiki-dark) !important;
-  background-color: var(--shiki-dark-bg) !important;
-
-  font-weight: var(--shiki-dark-font-weight) !important;
-  text-decoration: var(--shiki-dark-text-decoration) !important;
-}
