--- a/src/features/theme/themes/fuwari/styles/index.css
+++ b/src/features/theme/themes/fuwari/styles/index.css
@@ -204,7 +204,7 @@
   }
 
   .fuwari-code-folding-wrapper {
-    @apply relative transition-[max-height] duration-500 ease-in-out overflow-hidden;
+    @apply relative transition-[max-height] duration-500 ease-in-out overflow-x-auto overflow-y-hidden;
   }
 
   .fuwari-code-mask {
